--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p> look at me ver much</p>
     <p>hellow world</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quas temporibus aspernatur exercitationem vitae repellendus ab quae qui. Temporibus, nam recusandae alias ut ea odio adipisci officia consequatur dolore culpa.</p>
+     <img src="https://i.bikroy-st.com/oppo-a3s-6-128-brand-new-for-sale-dhaka-11/18dad382-c2f3-4bdd-8c8d-ff2b378dac6d/780/585/fitted.jpg" alt="" srcset="">
 </body>
 </html>
